--- a/index.html
+++ b/index.html
@@ -12,7 +12,37 @@
 </head>
 
 <body>
-  
+
+  <main class="main">
+
+    <div class="calculator-body">
+      <div class="screen"></div>
+      <div class="buttons-grid">
+        <button class="btn clear">CLEAR</button>
+        <button class="btn delete">DELETE</button>
+       <button class="btn">7</button>
+       <button class="btn">8</button>
+       <button class="btn">9</button>
+       <button class="btn">÷</button>
+       <button class="btn">4</button>
+       <button class="btn">5</button>
+       <button class="btn">6</button>
+       <button class="btn">x</button>
+       <button class="btn">1</button>
+       <button class="btn">2</button>
+       <button class="btn">3</button>
+       <button class="btn">-</button>
+       <button class="btn">.</button>
+       <button class="btn">0</button>
+       <button class="btn">=</button>
+       <button class="btn">+</button>
+      </div>
+      
+      </div>
+    </div>
+
+  </main>
+
 </body>
 
 </html>
