--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <main class="main">
 
     <div class="calculator-body">
-      <div class="screen"></div>
+      <div class="screen">
+        <p class="equation">1 + 1 = 2</p>
+        <p class="output">test</p>
+      </div>
       <div class="buttons-grid">
         <button class="btn clear">CLEAR</button>
         <button class="btn delete">DELETE</button>
