display selected number to screen
Also fixes styling issue where some elements would pop into place. Re-named button classes for specificity.

--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
 
     <div class="calculator-body">
       <div class="screen">
-        <p class="equation">1 + 1 = 2</p>
-        <p class="output">test</p>
+        <p class="history"></p>
+        <p class="main-output"></p>
       </div>
       <div class="buttons-grid">
-        <button class="btn clear">CLEAR</button>
-        <button class="btn delete">DELETE</button>
-       <button class="btn">7</button>
-       <button class="btn">8</button>
-       <button class="btn">9</button>
-       <button class="btn">÷</button>
-       <button class="btn">4</button>
-       <button class="btn">5</button>
-       <button class="btn">6</button>
-       <button class="btn">x</button>
-       <button class="btn">1</button>
-       <button class="btn">2</button>
-       <button class="btn">3</button>
-       <button class="btn">-</button>
-       <button class="btn">.</button>
-       <button class="btn">0</button>
-       <button class="btn">=</button>
-       <button class="btn">+</button>
+        <button class="btn-clear">CLEAR</button>
+        <button class="btn-delete">DELETE</button>
+        <button class="btn-num">7</button>
+        <button class="btn-num">8</button>
+        <button class="btn-num">9</button>
+        <button class="btn-opp">÷</button>
+        <button class="btn-num">4</button>
+        <button class="btn-num">5</button>
+        <button class="btn-num">6</button>
+        <button class="btn-opp">x</button>
+        <button class="btn-num">1</button>
+        <button class="btn-num">2</button>
+        <button class="btn-num">3</button>
+        <button class="btn-opp">-</button>
+        <button class="btn-opp">.</button>
+        <button class="btn-num">0</button>
+        <button class="btn-opp">=</button>
+        <button class="btn-opp">+</button>
       </div>
       
       </div>
