Add addition button second screen push
Once addition button is pressed this will push the history of pressed keys to second screen above output screen.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="calculator-body">
       <div class="screen">
-        <p class="history"></p>
+        <p class="secondary-output"></p>
         <p class="main-output"></p>
       </div>
       <div class="buttons-grid">
@@ -26,19 +26,19 @@
         <button class="btn-num">7</button>
         <button class="btn-num">8</button>
         <button class="btn-num">9</button>
-        <button class="btn-opp">÷</button>
+        <button class="btn-divide">÷</button>
         <button class="btn-num">4</button>
         <button class="btn-num">5</button>
         <button class="btn-num">6</button>
-        <button class="btn-opp">x</button>
+        <button class="btn-multiply">x</button>
         <button class="btn-num">1</button>
         <button class="btn-num">2</button>
         <button class="btn-num">3</button>
-        <button class="btn-opp">-</button>
+        <button class="btn-subtract">-</button>
         <button class="btn-opp">.</button>
         <button class="btn-num">0</button>
-        <button class="btn-opp">=</button>
-        <button class="btn-opp">+</button>
+        <button class="btn-equals">=</button>
+        <button class="btn-add">+</button>
       </div>
       
       </div>
