--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 
   </main>
 
+  <footer>
+    <div>
+      <p>Built by <a href="https://github.com/sepowell">sepowell</a> | 
+      <a href="https://github.com/sepowell/etch-a-sketch">Code</a>
+      </p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
